--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -366,11 +366,17 @@ pre {
     overflow: auto;
     background: #F7FAFB;
     border-radius: 3px;
+    word-wrap: normal;
+    -moz-hyphens: none;
+    -ms-hyphens: none;
+    -webkit-hyphens: none;
+    hyphens: none;
+    color: #333;
 }
 
 pre code, pre tt {
     font-size: inherit;
-    white-space: pre-wrap;
+    white-space: pre;
     background: transparent;
     border: none;
     padding: 0;
@@ -464,7 +470,7 @@ textarea, select, input:not([type="radio"]):not([type="checkbox"]){
 
 textarea {
     width: 100%;
-    max-width: 340px;
+    max-width: 960px;
     min-width: 250px;
     height: auto;
     min-height: 80px;
@@ -793,7 +799,7 @@ body.nav-opened .nav {
 
 /* Create a bouncing scroll-down arrow on homepage with cover image */
 .scroll-down {
-    display: block;
+    display: none;
     position: absolute;
     z-index: 100;
     bottom: 45px;
@@ -929,6 +935,68 @@ body.nav-opened .nav {
     transition: all 0.3s ease;
 }
 
+.home-button {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    display: inline-block;
+    float: left;
+    height: 38px;
+    padding: 0 15px;
+    border-style: solid;
+    border-width: 1px;
+    opacity: 1;
+    text-align: center;
+    font-size: 12px;
+    text-transform: uppercase;
+    line-height: 35px;
+    white-space: nowrap;
+    border-radius: 3px;
+    transition: all 0.5s ease;
+}
+.home-button:before {
+    font-size: 12px;
+    font-weight: bold;
+    margin-right: 6px;
+    position: relative;
+    top: 1px;
+}
+.home-button:hover {
+    background: #fff;
+}
+.home-button:focus {
+    outline: 0;
+}
+.nav-closed .home-button {
+    color: #fff;
+    border-color: rgba(255, 255, 255, 0.6);
+}
+.nav-closed .home-button:hover {
+    color: #222;
+}
+.nav-closed .no-cover .home-button {
+    border-color: #BFC8CD;
+    color: #9EABB3;
+}
+.nav-closed .no-cover .home-button:hover {
+    border-color: #555;
+    color: #555;
+}
+.nav-opened .home-button {
+    padding: 0 12px;
+    background: #111;
+    border-color: #111;
+    color: #fff;
+    -webkit-transform: translate3D(94px, 0, 0);
+        -ms-transform: translate3D(94px, 0, 0);
+            transform: translate3D(94px, 0, 0);
+    transition: all 0.3s ease;
+}
+.nav-opened .home-button .word {
+    opacity: 0;
+    transition: all 0.3s ease;
+}
+
 /* Special styles when overlaid on an image*/
 .main-nav.overlay {
     position: absolute;
@@ -995,7 +1063,7 @@ body.nav-opened .nav {
 .post {
     position: relative;
     width: 80%;
-    max-width: 710px;
+    max-width: 960px;
     margin: 4rem auto;
     padding-bottom: 4rem;
     border-bottom: #EBF2F6 1px solid;
@@ -1766,7 +1834,7 @@ body.page-template .post-title {
         box-sizing: border-box;
         height: auto;
         min-height: 240px;
-        height: 60vh;
+        height: 50vh;
         padding: 15% 0;
     }
 
