--- a/author.hbs
+++ b/author.hbs
@@ -7,6 +7,7 @@
 {{#author}}
     <header class="main-header author-head {{#if cover_image}}" style="background-image: url({{cover_image}}){{else}}no-cover{{/if}}">
         <nav class="main-nav overlay clearfix">
+            <a class="home-button" href="{{@blog.url}}" title="Home"><i class="fa fa-home"></i> Home</a>
             {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}
             {{#if @blog.navigation}}
                 <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
