fixing path to isso js script

--- a/post.hbs
+++ b/post.hbs
@@ -85,7 +85,7 @@
 
           <script data-isso="{{@blog.url}}/comments/"
                   data-isso-require-email="true"
-                  src="{{@blog.url}}/comments/js/embed.js"></script>
+                  src="{{@blog.url}}/comments/js/embed.min.js"></script>
           <noscript>Please enable JavaScript to view comments</noscript>
 
         </footer>
