--- a/post.hbs
+++ b/post.hbs
@@ -87,6 +87,7 @@
                   data-isso-require-email="true"
                   src="{{@blog.url}}/comments/js/embed.min.js"></script>
           <noscript>Please enable JavaScript to view comments</noscript>
+          <section id="isso-thread"></section>
 
         </footer>
 
