--- a/author.hbs
+++ b/author.hbs
@@ -4,7 +4,7 @@
 {{!-- The big featured header --}}
 
 {{!-- Everything inside the #author tags pulls data from the author --}}
-{{#author}}
+{{#primary_author}}
     <header class="main-header author-head {{#if cover_image}}" style="background-image: url({{cover_image}}){{else}}no-cover{{/if}}">
         <nav class="main-nav overlay clearfix">
             <a class="home-button" href="{{@blog.url}}" title="Home"><i class="fa fa-home"></i> Home</a>
@@ -31,7 +31,7 @@
             <span class="author-stats"><i class="icon-stats"></i> {{plural ../pagination.total empty='No posts' singular='% post' plural='% posts'}}</span>
         </div>
     </section>
-{{/author}}
+{{/primary_author}}
 
 {{!-- The main content area on the homepage --}}
 <main class="content" role="main">
