--- a/post.hbs
+++ b/post.hbs
@@ -33,7 +33,7 @@
         <footer class="post-footer">
 
         {{!-- Everything inside the #author tags pulls data from the author --}}
-        {{#author}}
+        {{#primary_author}}
 
             {{#if profile_image}}
             <figure class="author-image">
@@ -55,7 +55,7 @@
                 </div>
             </section>
 
-        {{/author}}
+        {{/primary_author}}
 
             <section class="share">
                 <h4>Share this post</h4>
