trying to fix google fonts sri

--- a/default.hbs
+++ b/default.hbs
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     {{!-- Styles'n'Scripts --}}
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" integrity="sha384-3Zn9bqNbWyvAeenDfwXffGoYl5sW8thkd3sMGKijkv8/tad9ZDc3wBYCqXVDxa+7" crossorigin="anonymous" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" integrity="sha256-F4EF9lzGfCibNt2dutZvkwjDKOmsI9JYvPIAXuHYtLA= sha256-PqHZKa8AV4fdqHvxkNhSc/PHImYcMMW3PqMu9glaUME= sha256-F4EF9lzGfCibNt2dutZvkwjDKOmsI9JYvPIAXuHYtLA=" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
 
 
